		-New Zone: ContainerZone - Has no draw and not selectable by default and gives no warnings about it, useful for ordering and holding other Zones
		-Zone.vSwipe() now has optional limits to match hSwipe()
		-ImageZone now has tintColour to allow setting of transparency and tint of the image
		-new method Zone.getOrigin()

	Feature Changes:
		-TextZone now selects(highlights)/unblurs when moving across the text to the right, and unselects(unhighlights)/blurs when moving across the text to the left 
		-TextZone now renders its text immediately
		-TextZone now cuts off text past its width, instead of going to a newline every character
		-Touches no longer have a touchDown whenever they start picking to a new Zone, instead a normal touchMoved will be called, to maintain the same functionality if needed simply do the needed action on the first touchMoved since the last touchUp 
		-Zone.getCentre(), Zone.getX(), and Zone.getY() now return global coordinates

	Bug Fixes:
		-push/pop style for every zone draw properly (no longer inherit style from parent zones)
		-push/pop style in touch methods properly
		-Try to do proper shutdown in TouchClient
		-set Zone.parent to null in TouchClient.add() to make sure we draw the Zone at the top level unless it gets a new parent set
		-TextZone.clone()/TextZone copy constructor fixed to copy all TextZone state
		-assign(Touch) and unassign(Touch) now work properly
		-No longer warn that touchMethod is missing if touchDownImpl/touchUpImpl/touchMovedImpl exists, and also don't auto-unassignall() if these methods are used
		-Zone.add() and TouchClient.add() now updates the Zone's matrix to make sure the first draw is done with the correct matrix (prevents an incorrect frame from being rendered)
		-add()/remove() of null Zone will no longer halt the execution of the sketch, and instead just prints an error
		-checkImpl() now properly checks superclasses, so inheritance of drawImpl() and touchImpl(), etc works now.